feat: removed content length (#17)
